--- a/author.html
+++ b/author.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unitok – NFT Marketplace HTML Template</title>
+	<title>Unifund – NFT Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -41,24 +41,7 @@
 			<div class="header__menu">
 				<ul class="header__nav">
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenuHome" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuHome">
-							<li><a href="index.html">Home style 1</a></li>
-							<li><a href="index2.html">Home style 2</a></li>
-							<li><a href="index3.html">Home style 3</a></li>
-						</ul>
-					</li>
-					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu">
-							<li><a href="explore.html">Explore style 1</a></li>
-							<li><a href="explore2.html">Explore style 2</a></li>
-							<li><a href="explore3.html">Explore style 3</a></li>
-							<li><a href="item.html">Item style 1</a></li>
-							<li><a href="item2.html">Item style 2</a></li>
-						</ul>
+						<a class="header__nav-link" href="explore.html" role="button" >Explore </a>
 					</li>
 					<li class="header__nav-item">
 						<a href="activity.html" class="header__nav-link">Activity</a>
@@ -67,7 +50,7 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unitok</a></li>
+							<li><a href="token.html">Unifund</a></li>
 							<li class="dropdown-submenu">
 								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
@@ -85,10 +68,11 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu1">
-							<li><a href="authors.html">Authors</a></li>
+							<li><a href="founders.html">Founder</a></li>
+							<li><a href="backers.html">Backers</a></li>
 							<li><a href="author.html">Author</a></li>
 							<li><a href="collection.html">Collection</a></li>
-							<li><a href="create.html">Create</a></li>
+							<li><a href="launch.html">Launch</a></li>
 						</ul>
 					</li>
 					<li class="header__nav-item">
@@ -138,17 +122,17 @@
 							<a href="author.html" class="author__avatar author__avatar--verified">
 								<img src="img/avatars/avatar5.jpg" alt="">
 							</a>
-							<h1 class="author__name"><a href="author.html">Lily Rose</a></h1>
-							<h2 class="author__nickname"><a href="author.html">@l1rose</a></h2>
+							<h1 class="author__name"><a href="author.html">Justin King</a></h1>
+							<h2 class="author__nickname"><a href="author.html">@jkmoney</a></h2>
 							<p class="author__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary</p>
 							<div class="author__code">
-								<input type="text" value="XAVUW3sw3ZunitokcLtemEfX3tGuX2plateWdh" id="author-code">
+								<input type="text" value="XAVUW3sw3ZUnifundcLtemEfX3tGuX2plateWdh" id="author-code">
 								<button type="button">
 									<span>Copied</span>
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18,19H6a3,3,0,0,1-3-3V8A1,1,0,0,0,1,8v8a5,5,0,0,0,5,5H18a1,1,0,0,0,0-2Zm5-9.06a1.31,1.31,0,0,0-.06-.27l0-.09a1.07,1.07,0,0,0-.19-.28h0l-6-6h0a1.07,1.07,0,0,0-.28-.19l-.09,0L16.06,3H8A3,3,0,0,0,5,6v8a3,3,0,0,0,3,3H20a3,3,0,0,0,3-3V10S23,10,23,9.94ZM17,6.41,19.59,9H18a1,1,0,0,1-1-1ZM21,14a1,1,0,0,1-1,1H8a1,1,0,0,1-1-1V6A1,1,0,0,1,8,5h7V8a3,3,0,0,0,3,3h3Z"/></svg>
 								</button>
 							</div>
-							<a href="#" class="author__link"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.41,8.64s0,0,0-.05a10,10,0,0,0-18.78,0s0,0,0,.05a9.86,9.86,0,0,0,0,6.72s0,0,0,.05a10,10,0,0,0,18.78,0s0,0,0-.05a9.86,9.86,0,0,0,0-6.72ZM4.26,14a7.82,7.82,0,0,1,0-4H6.12a16.73,16.73,0,0,0,0,4Zm.82,2h1.4a12.15,12.15,0,0,0,1,2.57A8,8,0,0,1,5.08,16Zm1.4-8H5.08A8,8,0,0,1,7.45,5.43,12.15,12.15,0,0,0,6.48,8ZM11,19.7A6.34,6.34,0,0,1,8.57,16H11ZM11,14H8.14a14.36,14.36,0,0,1,0-4H11Zm0-6H8.57A6.34,6.34,0,0,1,11,4.3Zm7.92,0h-1.4a12.15,12.15,0,0,0-1-2.57A8,8,0,0,1,18.92,8ZM13,4.3A6.34,6.34,0,0,1,15.43,8H13Zm0,15.4V16h2.43A6.34,6.34,0,0,1,13,19.7ZM15.86,14H13V10h2.86a14.36,14.36,0,0,1,0,4Zm.69,4.57a12.15,12.15,0,0,0,1-2.57h1.4A8,8,0,0,1,16.55,18.57ZM19.74,14H17.88A16.16,16.16,0,0,0,18,12a16.28,16.28,0,0,0-.12-2h1.86a7.82,7.82,0,0,1,0,4Z"/></svg> https://unitok.template</a>
+							<a href="#" class="author__link"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.41,8.64s0,0,0-.05a10,10,0,0,0-18.78,0s0,0,0,.05a9.86,9.86,0,0,0,0,6.72s0,0,0,.05a10,10,0,0,0,18.78,0s0,0,0-.05a9.86,9.86,0,0,0,0-6.72ZM4.26,14a7.82,7.82,0,0,1,0-4H6.12a16.73,16.73,0,0,0,0,4Zm.82,2h1.4a12.15,12.15,0,0,0,1,2.57A8,8,0,0,1,5.08,16Zm1.4-8H5.08A8,8,0,0,1,7.45,5.43,12.15,12.15,0,0,0,6.48,8ZM11,19.7A6.34,6.34,0,0,1,8.57,16H11ZM11,14H8.14a14.36,14.36,0,0,1,0-4H11Zm0-6H8.57A6.34,6.34,0,0,1,11,4.3Zm7.92,0h-1.4a12.15,12.15,0,0,0-1-2.57A8,8,0,0,1,18.92,8ZM13,4.3A6.34,6.34,0,0,1,15.43,8H13Zm0,15.4V16h2.43A6.34,6.34,0,0,1,13,19.7ZM15.86,14H13V10h2.86a14.36,14.36,0,0,1,0,4Zm.69,4.57a12.15,12.15,0,0,0,1-2.57h1.4A8,8,0,0,1,16.55,18.57ZM19.74,14H17.88A16.16,16.16,0,0,0,18,12a16.28,16.28,0,0,0-.12-2h1.86a7.82,7.82,0,0,1,0,4Z"/></svg> https://unifund.template</a>
 							<div class="author__social">
 								<a href="#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.07,6.35H15V7.76h5.09ZM19,16.05a2.23,2.23,0,0,1-1.3.37A2.23,2.23,0,0,1,16,15.88a2.49,2.49,0,0,1-.62-1.76H22a6.47,6.47,0,0,0-.17-2,5.08,5.08,0,0,0-.8-1.73,4.17,4.17,0,0,0-1.42-1.21,4.37,4.37,0,0,0-2-.45,4.88,4.88,0,0,0-1.9.37,4.51,4.51,0,0,0-1.47,1,4.4,4.4,0,0,0-.95,1.52,5.4,5.4,0,0,0-.33,1.91,5.52,5.52,0,0,0,.32,1.94A4.46,4.46,0,0,0,14.16,17a4,4,0,0,0,1.46,1,5.2,5.2,0,0,0,1.94.34,4.77,4.77,0,0,0,2.64-.7,4.21,4.21,0,0,0,1.63-2.35H19.62A1.54,1.54,0,0,1,19,16.05Zm-3.43-4.12a1.87,1.87,0,0,1,1-1.14,2.28,2.28,0,0,1,1-.2,1.73,1.73,0,0,1,1.36.49,2.91,2.91,0,0,1,.63,1.45H15.41A3,3,0,0,1,15.52,11.93Zm-5.29-.48a3.06,3.06,0,0,0,1.28-1,2.72,2.72,0,0,0,.43-1.58,3.28,3.28,0,0,0-.29-1.48,2.4,2.4,0,0,0-.82-1,3.24,3.24,0,0,0-1.27-.52,7.54,7.54,0,0,0-1.64-.16H2V18.29H8.1a6.55,6.55,0,0,0,1.65-.21,4.55,4.55,0,0,0,1.43-.65,3.13,3.13,0,0,0,1-1.14,3.41,3.41,0,0,0,.37-1.65,3.47,3.47,0,0,0-.57-2A3,3,0,0,0,10.23,11.45ZM4.77,7.86H7.36a4.17,4.17,0,0,1,.71.06,1.64,1.64,0,0,1,.61.22,1.05,1.05,0,0,1,.42.44,1.42,1.42,0,0,1,.16.72,1.36,1.36,0,0,1-.47,1.15,2,2,0,0,1-1.22.35H4.77ZM9.61,15.3a1.28,1.28,0,0,1-.45.5,2,2,0,0,1-.65.26,3.33,3.33,0,0,1-.78.08h-3V12.69h3a2.4,2.4,0,0,1,1.45.41,1.65,1.65,0,0,1,.54,1.39A1.77,1.77,0,0,1,9.61,15.3Z"/></svg></a>
 
@@ -209,7 +193,7 @@
 										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -238,7 +222,7 @@
 										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -265,7 +249,7 @@
 										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -292,7 +276,7 @@
 										<h3 class="card__title"><a href="item.html">Flowers in Concrete</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -318,7 +302,7 @@
 										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -345,7 +329,7 @@
 										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -374,7 +358,7 @@
 										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -400,7 +384,7 @@
 										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -427,7 +411,7 @@
 										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -454,7 +438,7 @@
 										<h3 class="card__title"><a href="item.html">Flowers in Concrete</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -480,7 +464,7 @@
 										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -507,7 +491,7 @@
 										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -544,7 +528,7 @@
 										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -570,7 +554,7 @@
 										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -596,7 +580,7 @@
 										<h3 class="card__title"><a href="item.html">Flowers in Concrete</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -622,7 +606,7 @@
 										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -648,7 +632,7 @@
 										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -674,7 +658,7 @@
 										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
-											<a href="author.html">@l1rose</a>
+											<a href="author.html">@jkmoney</a>
 										</div>
 										<div class="card__info">
 											<div class="card__price">
@@ -1160,7 +1144,7 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-2 order-2 order-lg-3 order-md-4 order-xl-4">
 					<h6 class="footer__title">Community</h6>
 					<div class="footer__nav">
-						<a href="token.html">Unitok</a>
+						<a href="token.html">Unifund</a>
 						<a href="blog.html">Our Blog</a>
 						<a href="faq.html">Help Center</a>
 						<a href="contacts.html">Contacts</a>
@@ -1187,7 +1171,7 @@
 							<a href="#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19,4H5A3,3,0,0,0,2,7V17a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V7A3,3,0,0,0,19,4Zm-.41,2-5.88,5.88a1,1,0,0,1-1.42,0L5.41,6ZM20,17a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V7.41l5.88,5.88a3,3,0,0,0,4.24,0L20,7.41Z"/></svg></a>
 						</div>
 
-						<small class="footer__copyright">© Unitok, 2021. Created by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a>.</small>
+						<small class="footer__copyright">© Unifund, 2021. Created by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a>.</small>
 					</div>
 				</div>
 			</div>
