--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unitok – NFT Marketplace HTML Template</title>
+	<title>Unifund – NFT Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -41,24 +41,7 @@
 			<div class="header__menu">
 				<ul class="header__nav">
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenuHome" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuHome">
-							<li><a href="index.html">Home style 1</a></li>
-							<li><a href="index2.html">Home style 2</a></li>
-							<li><a href="index3.html">Home style 3</a></li>
-						</ul>
-					</li>
-					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu">
-							<li><a href="explore.html">Explore style 1</a></li>
-							<li><a href="explore2.html">Explore style 2</a></li>
-							<li><a href="explore3.html">Explore style 3</a></li>
-							<li><a href="item.html">Item style 1</a></li>
-							<li><a href="item2.html">Item style 2</a></li>
-						</ul>
+						<a class="header__nav-link" href="explore.html" role="button" >Explore </a>
 					</li>
 					<li class="header__nav-item">
 						<a href="activity.html" class="header__nav-link">Activity</a>
@@ -67,7 +50,7 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unitok</a></li>
+							<li><a href="token.html">Unifund</a></li>
 							<li class="dropdown-submenu">
 								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
@@ -85,10 +68,11 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu1">
-							<li><a href="authors.html">Authors</a></li>
+							<li><a href="founders.html">Founder</a></li>
+							<li><a href="backers.html">Backers</a></li>
 							<li><a href="author.html">Author</a></li>
 							<li><a href="collection.html">Collection</a></li>
-							<li><a href="create.html">Create</a></li>
+							<li><a href="launch.html">Launch</a></li>
 						</ul>
 					</li>
 					<li class="header__nav-item">
@@ -191,7 +175,7 @@
 					</div>
 					<ul class="contacts__list">
 						<li><a href="tel:88002345678">8 800 234-56-78</a></li>
-						<li><a href="mailto:support@Unitok.com">support@Unitok.com</a></li>
+						<li><a href="mailto:support@Unifund.com">support@Unifund.com</a></li>
 						<li><a href="https://maps.google.com/maps?q=221B+Baker+Street,+London,+United+Kingdom&amp;hl=en&amp;t=v&amp;hnear=221B+Baker+St,+London+NW1+6XE,+United+Kingdom" class="open-map">221B Baker St, Marylebone, London</a></li>
 					</ul>
 					<div class="contacts__social">
@@ -207,7 +191,7 @@
 
 						<a href="#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.99432,2a10,10,0,1,0,10,10A9.99917,9.99917,0,0,0,11.99432,2Zm3.17951,15.15247a.70547.70547,0,0,1-1.002.3515l-2.71467-2.10938L9.71484,17.002a.29969.29969,0,0,1-.285.03894l.334-2.98846.01069.00848.00683-.059s4.885-4.44751,5.084-4.637c.20147-.189.135-.23.135-.23.01147-.23053-.36152,0-.36152,0L8.16632,13.299l-2.69549-.918s-.414-.1485-.453-.475c-.041-.324.46649-.5.46649-.5l10.717-4.25751s.881-.39252.881.25751Z"/></svg></a>
 
-						<a href="mailto:support@Unitok.com"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19,4H5A3,3,0,0,0,2,7V17a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V7A3,3,0,0,0,19,4Zm-.41,2-5.88,5.88a1,1,0,0,1-1.42,0L5.41,6ZM20,17a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V7.41l5.88,5.88a3,3,0,0,0,4.24,0L20,7.41Z"/></svg></a>
+						<a href="mailto:support@Unifund.com"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19,4H5A3,3,0,0,0,2,7V17a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V7A3,3,0,0,0,19,4Zm-.41,2-5.88,5.88a1,1,0,0,1-1.42,0L5.41,6ZM20,17a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V7.41l5.88,5.88a3,3,0,0,0,4.24,0L20,7.41Z"/></svg></a>
 					</div>
 				</div>
 			</div>
@@ -310,7 +294,7 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-2 order-2 order-lg-3 order-md-4 order-xl-4">
 					<h6 class="footer__title">Community</h6>
 					<div class="footer__nav">
-						<a href="token.html">Unitok</a>
+						<a href="token.html">Unifund</a>
 						<a href="blog.html">Our Blog</a>
 						<a href="faq.html">Help Center</a>
 						<a href="contacts.html">Contacts</a>
@@ -337,7 +321,7 @@
 							<a href="#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19,4H5A3,3,0,0,0,2,7V17a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V7A3,3,0,0,0,19,4Zm-.41,2-5.88,5.88a1,1,0,0,1-1.42,0L5.41,6ZM20,17a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V7.41l5.88,5.88a3,3,0,0,0,4.24,0L20,7.41Z"/></svg></a>
 						</div>
 
-						<small class="footer__copyright">© Unitok, 2021. Created by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a>.</small>
+						<small class="footer__copyright">© Unifund, 2021. Created by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a>.</small>
 					</div>
 				</div>
 			</div>
