--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unitok – NFT Marketplace HTML Template</title>
+	<title>Unifund – NFT Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -41,24 +41,7 @@
 			<div class="header__menu">
 				<ul class="header__nav">
 					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenuHome" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenuHome">
-							<li><a href="index.html">Home style 1</a></li>
-							<li><a href="index2.html">Home style 2</a></li>
-							<li><a href="index3.html">Home style 3</a></li>
-						</ul>
-					</li>
-					<li class="header__nav-item">
-						<a class="header__nav-link" href="#" role="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
-
-						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu">
-							<li><a href="explore.html">Explore style 1</a></li>
-							<li><a href="explore2.html">Explore style 2</a></li>
-							<li><a href="explore3.html">Explore style 3</a></li>
-							<li><a href="item.html">Item style 1</a></li>
-							<li><a href="item2.html">Item style 2</a></li>
-						</ul>
+						<a class="header__nav-link" href="explore.html" role="button" >Explore </a>
 					</li>
 					<li class="header__nav-item">
 						<a href="activity.html" class="header__nav-link">Activity</a>
@@ -67,7 +50,7 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu0">
-							<li><a href="token.html">Unitok</a></li>
+							<li><a href="token.html">Unifund</a></li>
 							<li class="dropdown-submenu">
 								<a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
@@ -85,10 +68,11 @@
 						<a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9.17a1,1,0,0,0-1.41,0L12,12.71,8.46,9.17a1,1,0,0,0-1.41,0,1,1,0,0,0,0,1.42l4.24,4.24a1,1,0,0,0,1.42,0L17,10.59A1,1,0,0,0,17,9.17Z"/></svg></a>
 
 						<ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu1">
-							<li><a href="authors.html">Authors</a></li>
+							<li><a href="founders.html">Founder</a></li>
+							<li><a href="backers.html">Backers</a></li>
 							<li><a href="author.html">Author</a></li>
 							<li><a href="collection.html">Collection</a></li>
-							<li><a href="create.html">Create</a></li>
+							<li><a href="launch.html">Launch</a></li>
 						</ul>
 					</li>
 					<li class="header__nav-item">
@@ -154,7 +138,7 @@
 							</div>
 
 							<div class="hero__slide" data-bg="img/home/slide3.jpg">
-								<h2 class="hero__title">Unitok – NFT Marketplace <br>HTML Template</h2>
+								<h2 class="hero__title">Unifund – NFT Marketplace <br>HTML Template</h2>
 								<p class="hero__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover exclusive digital assets.</p>
 								<div class="hero__btns">
 									<a href="explore.html" class="hero__btn hero__btn--clr">Explore</a>
@@ -1420,7 +1404,7 @@
 				<div class="col-6 col-md-4 col-lg-3 col-xl-2 order-2 order-lg-3 order-md-4 order-xl-4">
 					<h6 class="footer__title">Community</h6>
 					<div class="footer__nav">
-						<a href="token.html">Unitok</a>
+						<a href="token.html">Unifund</a>
 						<a href="blog.html">Our Blog</a>
 						<a href="faq.html">Help Center</a>
 						<a href="contacts.html">Contacts</a>
@@ -1447,7 +1431,7 @@
 							<a href="#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19,4H5A3,3,0,0,0,2,7V17a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V7A3,3,0,0,0,19,4Zm-.41,2-5.88,5.88a1,1,0,0,1-1.42,0L5.41,6ZM20,17a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V7.41l5.88,5.88a3,3,0,0,0,4.24,0L20,7.41Z"/></svg></a>
 						</div>
 
-						<small class="footer__copyright">© Unitok, 2021. Created by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a>.</small>
+						<small class="footer__copyright">© Unifund, 2021. Created by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a>.</small>
 					</div>
 				</div>
 			</div>
